--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.6
 yarn_mappings=1.20.6+build.1
-loader_version=0.15.10
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+mod_version=0.1.0
+maven_group=allclients2.lightweight
+archives_base_name=lightweight
 
 # Dependencies
 fabric_version=0.97.8+1.20.6
